# psa-v2

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  docker-compose.override.example.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  publish-cli.yml  publish-core.yml  publish.yml
api/: Dockerfile  README.md  pyproject.toml
api/src/psa_api/: __init__.py  errors.py  main.py  routes.py  schema_validation.py
api/tests/: conftest.py  test_api_endpoints.py
cli/: README.md  pyproject.toml
cli/src/psa_cli/: __init__.py  __main__.py  app.py  arg_types.py  commands_create.py  commands_evaluate.py  commands_show.py  commands_update.py  commands_upsert.py  errors.py  handlers.py  io_json.py  locks.py  output.py  parser.py  schema.py  skills.py  store.py
cli/src/psa_cli/skills/psa-strategist/: SKILL.md
cli/src/psa_cli/skills/psa-strategist/references/: log-payload-guide.md  runtime-adapter.md
cli/tests/: conftest.py  test_cli_integration.py  test_memory_schema_sync.py  test_parser.py  test_release_validator.py  test_schema.py  test_skills.py  test_store.py
core/: README.md  pyproject.toml
core/src/psa_core/: __init__.py  contracts.py  engine.py  math.py  types.py  validation.py
core/tests/: conftest.py  test_contracts.py  test_engine.py  test_invariants.py  test_validation.py
docs/: ARCHITECTURE.md  CONTRACTS.md  DOMAIN_MODEL.md  MATH_SPEC.md  RELEASE_RUNBOOK.md  TESTING_STRATEGY.md
docs/adr/: 0001-market-mode-unification.md  0002-no-pydantic-in-core.md  0003-eps-numerical-guard.md  0004-cli-stateful-local-store.md  0005-single-compute-core-and-portable-strategy-payload.md
examples/: batch_timeseries_rows.json  bear_accumulate_point.json  bull_distribute_point.json  evaluate_point_input.json  evaluate_portfolio.json  range_timeseries_rows.json  strategy_bear.json
schemas/: evaluate_point.request.v1.json  evaluate_point.response.v1.json  evaluate_portfolio.request.v1.json  evaluate_portfolio.response.v1.json  evaluate_rows.request.v1.json  evaluate_rows.response.v1.json  evaluate_rows_from_ranges.request.v1.json  log_append.request.v1.json  strategy_upsert.request.v1.json
scripts/release/: verify_component_release.py  verify_release_state.py
skills/psa-strategist/: SKILL.md
skills/psa-strategist/agents/: openai.yaml
skills/psa-strategist/references/: cli-recipes.md  command-authority.md  dialog-playbook.md  domain-lock.md  memory-commit-policy.md  memory-schema-v1.json  psa-json-templates.md  response-format.md  runtime-adapter.md  workflow.md
skills/psa-strategist/scripts/: memory_store.py  render_strategy_view.py
src/psa_core/: __init__.py  engine.py  validation.py
tests/: test_contracts.py  test_engine.py  test_validation.py
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.ts
web/nginx/: default.conf
web/src/: App.test.tsx  App.tsx  RootApp.test.tsx  RootApp.tsx  main.tsx  styles.css
web/src/components/: ChartsPanel.tsx  CreateScreen.tsx  PlotlyChart.tsx  StrategyEditor.tsx  UseScreen.tsx
web/src/docs/: DocsPage.tsx  content.test.tsx  content.ts  prompt.ts
web/src/lib/: api.ts  charts.ts  persistence.ts  strategy.test.ts  strategy.ts  types.ts  weights.ts
