[project]
name = "psa-platform"
version = "0.1.0"
description = "PSA monorepo workspace for strategy engine, CLI, API, and integrations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "hypothesis>=6.135.0",
    "jsonschema>=4.25.0",
    "pre-commit>=4.3.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psa_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
