[project]
name = "psa-workspace"
version = "0.1.0"
description = "PSA monorepo workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "fastapi>=0.115.0",
    "hypothesis>=6.135.0",
    "httpx>=0.27.0",
    "jsonschema>=4.25.0",
    "pre-commit>=4.3.0",
    "pytest>=8.3.0",
    "ruff>=0.7.0",
]

[tool.uv.workspace]
members = [
    "core",
    "cli",
    "api",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["core/tests", "api/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
