[project]
name = "psa-api"
version = "0.1.0"
description = "FastAPI service for PSA workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "jsonschema>=4.25.0",
    "psa-core",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
psa-core = { workspace = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psa_api"]
