[project]
name = "psa-strategy-cli"
version = "0.1.1"
description = "CLI for PSA workspace"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.0",
    "psa-strategy-core>=0.1,<0.2",
]

[project.scripts]
psa = "psa_cli.__main__:main"

[tool.uv.sources]
psa-strategy-core = { workspace = true }

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psa_cli"]

[tool.hatch.build.targets.sdist.force-include]
"../schemas" = "src/psa_cli/schemas"
