[project]
name = "psa-strategy-core"
version = "0.2.0"
description = "Pure PSA computation core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/psa_core"]
